<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_opcion_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="com.fastbuyapp.omar.fastbuy.OpcionLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/isotipo_fastbuy"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/imageView2" />

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/logo_relieve"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/imageView3" />


                <TextView
                    android:text="@string/eslogan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textAlignment="center"
                    android:textColor="@color/fastbuy"
                    android:textStyle="normal|italic"
                    android:visibility="gone"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fondo_curvo"
                android:orientation="vertical"
                android:paddingHorizontal="30dp"
                android:paddingVertical="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="Inicia sesión"
                    android:textColor="@color/negro"
                    android:textStyle="bold"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/txtUsuarioLogeado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="Ingresa tu número de celular" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_height="45dp"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText2"
                        android:background="@drawable/cajatexto"
                        android:textAlignment="center"
                        android:layout_marginRight="5dp"
                        android:text="+51"
                        android:drawableLeft="@drawable/peru"
                        android:layout_width="100dp"
                        android:layout_marginVertical="15dp"
                        android:clickable="false"
                        android:enabled="false"
                        android:paddingLeft="20dp"
                        android:paddingRight="15dp" />
                    <EditText
                        android:id="@+id/txtCelularIngresar"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginVertical="15dp"
                        android:paddingHorizontal="15dp"
                        android:ems="10"
                        android:background="@drawable/cajatexto"
                        android:hint="Número de celular"
                        android:inputType="number"
                        android:text="" />
                </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="Te enviaremos un mensaje de texto con un código de verificación." />

                <Button
                    android:id="@+id/btnValidarNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/boton_gradient"
                    android:text="Siguiente"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtIniciaSesionCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="o inicia sesión con:"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnIniciarGoogle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/shadow"
                        android:drawableLeft="@drawable/googleg_standard_color_18"
                        android:paddingLeft="20dp"
                        android:paddingRight="35dp"
                        android:text="@string/login_google"
                        android:textSize="10dp"
                        android:typeface="normal" />

                    <Button
                        android:id="@+id/btnIniciar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@drawable/shadow"
                        android:text="@string/login"
                        android:textSize="10dp"
                        android:typeface="normal"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnIniciarFacebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/shadow"
                        android:drawableLeft="@drawable/com_facebook_favicon_blue"
                        android:fontFamily="sans-serif-medium"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/login_facebook"
                        android:textAlignment="center"
                        android:textSize="10dp"
                        android:typeface="normal" />

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/loginButonFacebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/botonverde"
                        android:text="INGRESA CON FACEBOOK"
                        android:textColor="@color/blanco"
                        android:visibility="gone" />

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/loginButonGoogle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:orientation="vertical">
        <TextView
            android:text="Al inscribirse usted acepta los Términos de uso y la política de privacidad de FastBuy S.A.C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblTerminos"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="12sp" />
    </LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>
